fixed overflow text and add fadding effect to cards

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -199,3 +199,9 @@ footer.page-footer {
   padding-top: 20px;
   background-color: #333333;
 }
+
+
+.hideme
+{
+  opacity:0;
+}
